2004-08-19  Oyvind Harboe <oyvind.harboe@zylin.com>
2004-09-08  Andrew Lunn <andrew.lunn@ascom.ch>
	
	* windows_telnet.c: now demonstrates chat script TIMEOUT, which
	makes connection more snappy. It also repeatably attempts at
	connect until a connection is established instead of a single try.
	Once a telnet session is aborted, a new one can be established.
	Also cleaned up the indentation to make it more readable.

2004-06-29	Matt Jerdonek <maj1224@yahoo.com>

	* cdl/ppp.cdl:
	* src/ipcp.c:
		Add option to disallow negotiation of old-style VJ compression
	* include/ppp.h:
		Add structure to track ppp failure reasons
	* include/pppd.h:
		Fix compiler warning
	* src/auth.c:
	* src/lcp.c:
	* src/pppd.c:
		Add code to track ppp failure reasons
	* src/chat.c:
		Fixes to clear out buffer space to allow chat script to run 
		multiple times.  Note: function is still not thread-safe
	* src/sys-ecos.c:
		Reset carrier detected bit when carrier lost
		Reset ppp_tty control block when PPP started

2004-06-24  Oyvind Harboe <oyvind.harboe@zylin.com>

	* tests/windows_telnet.c:
	* cdl/ppp.cdl:
	Added windows_telnet example application. Connects to Windows PPP 
	server and waits for a telnet session.
		
2004-05-06  Mark Retallack <mark.retallack@siemens.com>

	* src/ppp_io.c: 
	* src/sys-ecos.c: 	
	* src/ppp_io.h:	
	The wait_input function sometimes blocked even if a packet was
	available for processing. Now checks the tty queue and then the 
	serial driver before blocking.

2004-05-06  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/auth.c: Don't use non-eCos <paths.h>
	* src/pppd.c: Don't use non-eCos <sys/wait.h> and <sys/resource.h>
	* src/sys-ecos.c: netmask must be extern - not all tools have
	COMMON section support.

2004-04-15  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/chat.c: Script now returns success when it runs to completion

2004-03-31  John Dallaway  <jld@ecoscentric.com>

	* cdl/ppp.cdl: Correct capitalisation in display strings.
